syntax = "proto3";
package feature_toggle;
option go_package = "github.com/featureguards/client-go/proto/feature_toggle";
import "google/protobuf/timestamp.proto";
import "shared/user.proto";

message FeatureToggleHistory {
  repeated FeatureToggle history = 1;
}

message Platform {
  enum Type {
    DEFAULT = 0;
    WEB = 1;
    MOBILE = 2;
  }
}

message FeatureToggle {
  enum Type {
    ON_OFF = 0;
    PERCENTAGE = 1;
    // Fail if can't confirm. Must be used by server-side code only.
    PERMISSION = 2;
    // MultiVariant.
    EXPERIMENT = 3;
  }

  string id = 1;  // Read-only
  string name = 2;
  Type toggle_type = 3;  // Set once.
  int64 version = 4;     // Read-only.
  bool enabled = 5;
  string description = 6;
  repeated Platform.Type platforms = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.Timestamp deleted_at = 10;
  string project_id = 11;
  user.User created_by = 12;
  user.User updated_by = 13;

  oneof FeatureDefinition {
    OnOffFeature on_off = 20;
    PercentageFeature percentage = 21;
    PermissionFeature permission = 22;
    ExperimentFeature experiment = 23;
  }
}

message StringOp {
  enum Operator {
    EQ = 0;
    CONTAINS = 1;
    IN = 2;
    // TODO: Regex
  }
  Operator op = 1;
  repeated string values = 2;
}

message BoolOp {
  bool value = 1;
}

message FloatOp {
  enum Operator {
    EQ = 0;
    GT = 1;
    LT = 2;
    GTE = 3;
    LTE = 4;
    NEQ = 5;
    IN = 6;
  }

  Operator op = 1;
  repeated float values = 2;
}

message DateTimeOp {
  enum Operator {
    BEFORE = 0;
    AFTER = 1;
  }

  Operator op = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message Key {
  enum Type {
    STRING = 0;
    BOOLEAN = 1;
    FLOAT = 2;
    DATE_TIME = 3;
  }
  string key = 1;
  Type key_type = 2;
}

message Match {
  Key key = 1;

  oneof Operation {
    StringOp string_op = 10;
    BoolOp bool_op = 11;
    FloatOp float_op = 12;
    DateTimeOp date_time_op = 13;
  }
}

message Variant {
  repeated Match matches = 1;
  float weight = 2;
}

message OnOffFeature {
  Variant on = 1;
  Variant off = 2;
}

message Stickiness {
  enum Type {
    RANDOM = 0;
    KEYS = 1;
  }
  Type stickiness_type = 1;
  repeated Key keys = 2;
}

message PercentageFeature {
  string salt = 1;
  Variant on = 2;
  Variant off = 3;
  Stickiness stickiness = 4;
}

message PermissionFeature {
  string salt = 1;
  Variant on = 2;
  Variant off = 3;
}

message ExperimentFeature {
  string salt = 1;
  repeated Variant variants = 2;
}
